--- a/LAB2_Timer.ioc
+++ b/LAB2_Timer.ioc
@@ -64,29 +64,35 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=EN_0
 PA1.Locked=true
 PA1.Signal=GPIO_Output
-PA10.GPIOParameters=GPIO_Label
+PA10.GPIOParameters=PinState,GPIO_Label
 PA10.GPIO_Label=ENM2
 PA10.Locked=true
+PA10.PinState=GPIO_PIN_RESET
 PA10.Signal=GPIO_Output
-PA11.GPIOParameters=GPIO_Label
+PA11.GPIOParameters=PinState,GPIO_Label
 PA11.GPIO_Label=ENM3
 PA11.Locked=true
+PA11.PinState=GPIO_PIN_RESET
 PA11.Signal=GPIO_Output
-PA12.GPIOParameters=GPIO_Label
+PA12.GPIOParameters=PinState,GPIO_Label
 PA12.GPIO_Label=ENM4
 PA12.Locked=true
+PA12.PinState=GPIO_PIN_RESET
 PA12.Signal=GPIO_Output
-PA13.GPIOParameters=GPIO_Label
+PA13.GPIOParameters=PinState,GPIO_Label
 PA13.GPIO_Label=ENM5
 PA13.Locked=true
+PA13.PinState=GPIO_PIN_RESET
 PA13.Signal=GPIO_Output
-PA14.GPIOParameters=GPIO_Label
+PA14.GPIOParameters=PinState,GPIO_Label
 PA14.GPIO_Label=ENM6
 PA14.Locked=true
+PA14.PinState=GPIO_PIN_RESET
 PA14.Signal=GPIO_Output
-PA15.GPIOParameters=GPIO_Label
+PA15.GPIOParameters=PinState,GPIO_Label
 PA15.GPIO_Label=ENM7
 PA15.Locked=true
+PA15.PinState=GPIO_PIN_RESET
 PA15.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=EN_1
@@ -108,13 +114,15 @@ PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=DOT
 PA6.Locked=true
 PA6.Signal=GPIO_Output
-PA8.GPIOParameters=GPIO_Label
+PA8.GPIOParameters=PinState,GPIO_Label
 PA8.GPIO_Label=ENM0
 PA8.Locked=true
+PA8.PinState=GPIO_PIN_RESET
 PA8.Signal=GPIO_Output
-PA9.GPIOParameters=GPIO_Label
+PA9.GPIOParameters=PinState,GPIO_Label
 PA9.GPIO_Label=ENM1
 PA9.Locked=true
+PA9.PinState=GPIO_PIN_RESET
 PA9.Signal=GPIO_Output
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=SEG_0
